# Kaggle-Playground-Compeition

./: .gitignore  README.md  main.py  pyproject.toml
common/: helper.py
series/season5_ep8/: eda.ipynb  main.py
series/season5_ep8/src/: model_pipeline.py  preprocess.py
src/: config.py  helper.py  model_pipeline.py  preprocess.py
